DEV Add media querries, fix layout issues

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@ body {
 main {
   position: absolute;
   top: 0;
-  left: 350px;
+  left: 300px;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -24,7 +25,7 @@ a {
 
 ul {
   list-style: none;
-  width: 15em;
+  width: 30%;
   padding: 1em;
   margin: 0 0 1em ;
   box-shadow: 1px 2px 3px 4px rgba(12,12,12,0.2);
@@ -49,11 +50,11 @@ li > a:visited {
 }
 
 .main-section {
-  margin: 1em 0;
-  padding: 0; 
+  margin: 1em 3em 1em 2em;
+  padding: 0;
 }
 
-header {
+.main-section header {
   padding-left: 1em;
   font-size: 1.5em;
   font-weight: bold;
@@ -62,14 +63,16 @@ header {
 
 code {
   display: block;
-  padding: 0 1em 1.5em 1em;
+  padding: 0 1em;
   margin: 1em;
   max-width: 90%;
   overflow: auto;
   background-color: black;
   border-radius: 1em;
   font-size: .7em;
+  font-family: monospace;
   color: rgb(30, 209, 30);
+  white-space: pre;
 }
 
 nav {
@@ -81,7 +84,12 @@ nav {
   text-align: center;
 }
 
-nav > header {
+.logo {
+  width: 5em;
+  height: 5em;
+}
+
+.nav-header {
   margin-bottom: 1em;
   font-size: 1.5em;
   line-height: 1.5;
@@ -101,4 +109,47 @@ p::first-letter {
   font-weight: bold;
   font-size: 1.1em;
   letter-spacing: .05em;
+}
+
+.to-top {
+  display: none;
+}
+
+@media (max-width: 1095px) {
+  main {
+    left: 0;
+  }
+  
+  nav {
+    display: none;
+  }
+
+  .to-top {
+    display: block;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    text-decoration: none;
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+    text-align: center;
+    letter-spacing: -25px;
+    background-color: palevioletred;
+  }
+}
+
+@media (max-width: 840px) {
+  main {
+    position: static;
+    max-width: 700px;
+    margin: 1em auto;
+    font-size: .8em;
+  }
+}
+
+@media (max-width: 600px) {
+  ul {
+    display: none;
+  }
 }
